--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   },
   "devDependencies": {
     "@vercel/ncc": "^0.36.0",
-    "eslint": "^8.32.0"
+    "eslint": "^8.32.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
