--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/dogoo-me/rustlings-progress#readme",
   "dependencies": {
     "@actions/core": "^1.10.0",
+    "@actions/github": "^5.1.1",
     "toml": "^3.0.0"
   },
   "devDependencies": {
